# ConcerTrack-backend

./: .gitignore  README.md
concertrack_backend/: .env  Cargo.toml  Rocket.toml  diesel.toml
concertrack_backend/src/: data_access.rs  main.rs
concertrack_backend/src/application/: tracked.rs
concertrack_backend/src/data_access/: database.rs  model.rs  schema.rs
concertrack_backend/src/data_access/migrations/2021-10-30-141756_create_tracked/: down.sql  up.sql
