[package]
name = "concertrack_backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = "0.6.0-alpha1"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
